--- a/main/assets/counts/full.html
+++ b/main/assets/counts/full.html
@@ -180,6 +180,10 @@ document.documentElement.style.setProperty('--fontcolor', fc);
 document.documentElement.style.setProperty('--fontalign', fa);
 document.documentElement.style.setProperty('--fontweight', fw);
 document.documentElement.style.setProperty('--size', size + "px");
+document.documentElement.style.setProperty('--size2', (size / 5 * 2) + "px");
+document.documentElement.style.setProperty('--size3', (size / 5 * 9) + "px");
+document.documentElement.style.setProperty('--size4', "-" + (size / 5 * 3.3) + "px");
+document.documentElement.style.setProperty('--size5', (size / 5) + "px");
 document.documentElement.style.setProperty('--font', font);
 
 // Dynamically load Google Font
