--- a/streams/mrbeastrise/post.html
+++ b/streams/mrbeastrise/post.html
@@ -33,7 +33,7 @@
       const user2 = document.getElementById('user2').value;
 
       try {
-        const response = await fetch('/api/streams/mrbeastrise', {
+        const response = await fetch('https://huntingstats378.onrender.com/api/streams/mrbeastrise', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
