--- a/streams/mrbeastrise/background.html
+++ b/streams/mrbeastrise/background.html
@@ -10,7 +10,7 @@
       padding: 0;
       height: 100%;
       width: 100%;
-      background-color: black;
+      background-color: transparent;
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
