--- a/streams/mrbeastrise/studio.html
+++ b/streams/mrbeastrise/studio.html
@@ -1,7 +1,7 @@
 <link id="font" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800&display=swap" rel="stylesheet">
 <link rel=stylesheet href="https://lcedit.com/odometer/odometer.css">
 <script src="https://lcedit.com/odometer/odometer.js"></script>
-
+<script src="https://huntingstats378.github.io/main/assets/js/fetch-requests.js"></script>
 <body>
     <span id="count" class="odometer">0</span>
 </body>
@@ -93,13 +93,20 @@ function durationNumber(num) {
     return num;
 }
 
-setInterval(() => {
-    fetch(`https://huntingstats378.onrender.com/api/youtube/channel/${id}`)
-        .then((res) => res.json())
-        .then((data) => {
-            document.getElementById("count").innerHTML = data.studio || data.counts[0];
-        });
-}, 2000);
+// Function to fetch YouTube channel data
+async function updateCount() {
+    if (!id) return; // Skip if ID is not set yet
+    const data = await fetchyoutubechannel(id);
+    document.getElementById("count").innerHTML = data.studio;
+}
+
+// Fetch ID and YouTube data immediately
+(async () => {
+    await updateCount();
+})();
+
+// Fetch YouTube data every 2 seconds
+setInterval(updateCount, 2000);
 
 // Apply styles using the fetched parameters
 document.documentElement.style.setProperty('--backcolor', bg);
