--- a/sta/leaderboard.html
+++ b/sta/leaderboard.html
@@ -369,34 +369,37 @@
     </div>
 </body>
 <script>
-    function getAvatarURL(user) {
-        if (!user.avatar || !user.id) return "./default.png"; // fallback
-        const isGif = user.avatar.startsWith("a_");
+    function getAvatarURL(userId, avatarHash) {
+        if (!avatarHash || !userId) return "./default.png";
+        const isGif = avatarHash.startsWith("a_");
         const extension = isGif ? "gif" : "png";
-        return `https://cdn.discordapp.com/avatars/${user.id}/${user.avatar}.${extension}`;
+        return `https://cdn.discordapp.com/avatars/${userId}/${avatarHash}.${extension}`;
     }
 
     async function fetchAndUpdate() {
         try {
-            const response = await fetch("https://api.lurkr.gg/leaderboard/global?limit=50", {
+            const response = await fetch("https://api.lurkr.gg/v1/leaderboard/723796776355758242", {
                 headers: {
                     "X-API-Key": "lkr_KxOpmNoRKReZlYDhFi3B4RifvNFWbszLzRZR0EsROkE"
                 }
             });
-
-            if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
             const data = await response.json();
-            const users = data.users || [];
+            const users = data.levels;
 
-            users.slice(0, 50).forEach((user, index) => {
+            users.slice(0, 50).forEach((userData, index) => {
                 const nameEl = document.getElementById(`name_${index}`);
                 const countEl = document.getElementById(`count_${index}`);
                 const imageEl = document.getElementById(`image_${index}`);
 
-                if (nameEl) nameEl.textContent = user.username;
-                if (countEl) countEl.innerHTML = user.totalXp;
+                const username = userData.user.username;
+                const xp = userData.xp;
+                const avatar = userData.user.avatar;
+                const userId = userData.userId;
+
+                if (nameEl) nameEl.textContent = username;
+                if (countEl) countEl.innerHTML = xp;
                 if (imageEl) {
-                    const avatarURL = getAvatarURL(user);
+                    const avatarURL = getAvatarURL(userId, avatar);
                     imageEl.src = avatarURL;
                     imageEl.onerror = () => {
                         imageEl.onerror = null;
