Update and rename sta.htm to sta.html

--- a/sta.html
+++ b/sta.html
@@ -33,15 +33,6 @@
   <div class="odometer" id="xpCounter">Loading...</div>
 
   <script>
-    function totalXPToLevel(level) {
-      const n = level;
-      return (n * (2 * 75 + (n - 1) * 100)) / 2;
-    }
-
-    function getTotalXP(level, currentXP) {
-      return Math.round(totalXPToLevel(level) + currentXP);
-    }
-
     function getUserIdFromURL() {
       const params = new URLSearchParams(window.location.search);
       return params.get("id");
@@ -55,15 +46,18 @@
       }
 
       try {
-        const response = await fetch(`https://huntingstats378.onrender.com/api/discord/statistics/${userId}`);
+        const response = await fetch(`https://api.lurkr.gg/levels/${userId}`);
         const data = await response.json();
 
-        const level = data.level;
-        const xpInLevel = data.xp;
-        const totalXP = getTotalXP(level, xpInLevel);
+        if (!data || !data.level || !data.xp || !data.user) {
+          throw new Error("Invalid response");
+        }
 
-        document.getElementById("name").innerText = data.username;
-        document.getElementById("xpCounter").innerText = totalXP;
+        const totalXP = data.xp;
+        const username = data.user.globalName || data.user.username || "Unknown";
+
+        document.getElementById("name").innerText = username;
+        document.getElementById("xpCounter").innerText = totalXP.toLocaleString();
       } catch (error) {
         document.getElementById("xpCounter").innerText = "Error loading XP";
         console.error("Error fetching XP:", error);
@@ -71,7 +65,7 @@
     }
 
     fetchXP();
-    setInterval(fetchXP, 60000); // Refresh every 10s
+    setInterval(fetchXP, 60000); // Refresh every minute
   </script>
 </body>
 </html>
