--- a/sta.html
+++ b/sta.html
@@ -33,7 +33,7 @@
   <div class="odometer" id="xpCounter">Loading...</div>
 
   <script>
-const BASE_URL = "https://api.lurkr.gg/v1/leaderboard";
+const BASE_URL = "https://corsproxy.io/?https://api.lurkr.gg/v1/leaderboard";
 let currentPage = 1;
 
 function getAvatarURL(user) {
