--- a/main/assets/counts/full.html
+++ b/main/assets/counts/full.html
@@ -127,7 +127,7 @@ setInterval(async () => {
             animation: ['default', 'byDigit', 'count', 'minimal'][animation],
             downColor: down,
             duration: durationNumber(duration) * 1000,
-            removeLeadingZeros: true,
+            removeLeadingZeros: false,
             reverseAnimation: false,
             format: [',ddd', 'ddd', ' ddd', ':dd'][3],
             upColor: up
@@ -143,7 +143,7 @@ setInterval(async () => {
             animation: ['default', 'byDigit', 'count', 'minimal'][animation],
             downColor: down,
             duration: durationNumber(duration) * 1000,
-            removeLeadingZeros: true,
+            removeLeadingZeros: false,
             reverseAnimation: false,
             format: [',ddd', 'ddd', ' ddd', ':dd'][format],
             upColor: up
