--- a/main/assets/counts/index.html
+++ b/main/assets/counts/index.html
@@ -105,7 +105,7 @@ setInterval(async () => {
             animation: ['default', 'byDigit', 'count', 'minimal'][animation],
             downColor: down,
             duration: durationNumber(duration) * 1000,
-            removeLeadingZeros: true,
+            removeLeadingZeros: false,
             reverseAnimation: false,
             format: [',ddd', 'ddd', ' ddd', ':dd'][3],
             upColor: up
@@ -121,7 +121,7 @@ setInterval(async () => {
             animation: ['default', 'byDigit', 'count', 'minimal'][animation],
             downColor: down,
             duration: durationNumber(duration) * 1000,
-            removeLeadingZeros: true,
+            removeLeadingZeros: false,
             reverseAnimation: false,
             format: [',ddd', 'ddd', ' ddd', ':dd'][format],
             upColor: up
