--- a/main/assets/counts/index.html
+++ b/main/assets/counts/index.html
@@ -142,7 +142,7 @@ setInterval(async () => {
             let count = studio === true ? goal - data.studio : goal - data.counts[counter];
 
             console.log("Calculated Count:", count);
-            document.getElementById("count").innerHTML = Math.abs(count);
+            document.getElementById("count").innerHTML = Math.floor(Math.abs(count));
 
         } catch (error) {
             console.error("Error fetching data:", error);
