--- a/sta-leaderboard.html
+++ b/sta-leaderboard.html
@@ -8,9 +8,162 @@
   <link href="https://huntingstats378.github.io/HuntingStats378/main/assets/ess/odometer.css" rel="stylesheet"/>
   <script src="https://huntingstats378.github.io/HuntingStats378/main/assets/ess/odometer.js"></script>
   <style>
-    /* (same styles as your original) */
-    /* Keep your full style block here unchanged */
-  </style>
+      body {
+        margin: 0;
+        padding: 0;
+        background-color: #121212;
+        color: #e0e0e0;
+        font-family: 'Poppins', sans-serif;
+        line-height: 1.6;
+      }
+
+      h1 {
+        text-align: center;
+        font-size: 2.75rem;
+        margin: 2rem 0 1.5rem;
+        color: #ffb300;
+        text-shadow: 0 0 10px rgba(255, 179, 0, 0.5);
+      }
+
+      #userList {
+        max-width: 1000px;
+        margin: 0 auto;
+        padding: 0 20px 50px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+      }
+
+      .user-card {
+        display: flex;
+        align-items: center;
+        background: #1e1e1e;
+        padding: 20px;
+        border-radius: 14px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        gap: 20px;
+        transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+      }
+
+      .user-card:hover {
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+      }
+
+      .rank {
+        font-size: 2rem;
+        font-weight: 500;
+        width: 60px;
+        text-align: center;
+        color: #ddd;
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+      }
+
+      .rank.gold {
+        color: gold;
+        text-shadow: 1px 1px 4px rgba(255, 215, 0, 0.7);
+      }
+
+      .rank.silver {
+        color: silver;
+        text-shadow: 1px 1px 4px rgba(192, 192, 192, 0.7);
+      }
+
+      .rank.bronze {
+        color: #cd7f32;
+        text-shadow: 1px 1px 4px rgba(205, 127, 50, 0.7);
+      }
+
+      .avatar {
+        width: 72px;
+        height: 72px;
+        border-radius: 50%;
+        object-fit: cover;
+        border: 3px solid #ffb300;
+        box-shadow: 0 0 8px rgba(255, 179, 0, 0.5);
+      }
+
+      .user-info {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+      }
+
+      .username {
+        font-size: 1.3rem;
+        font-weight: 700;
+        color: #fff;
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+      }
+
+      .odometer {
+        font-size: 1.6rem;
+        color: #ffdd4a;
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+      }
+
+      .progress-container {
+        background: #333;
+        border-radius: 10px;
+        overflow: hidden;
+        height: 12px;
+        width: 100%;
+        margin-top: 6px;
+        box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.4);
+      }
+
+      .progress-bar {
+        height: 100%;
+        background: linear-gradient(90deg, #ff8f00, #ffdd4a);
+        transition: width 0.3s ease-out;
+      }
+
+      .xp-labels {
+        font-size: 0.9rem;
+        color: #bbb;
+        display: flex;
+        justify-content: space-between;
+      }
+
+      #loadingMsg {
+        text-align: center;
+        color: #999;
+        font-size: 1.2rem;
+        padding: 2rem;
+        font-style: italic;
+      }
+
+      @media (max-width: 600px) {
+        h1 {
+          font-size: 2rem;
+        }
+
+        .user-card {
+          flex-direction: column;
+          align-items: flex-start;
+          padding: 15px;
+        }
+
+        .rank {
+          width: auto;
+          font-size: 1.5rem;
+          margin-bottom: 10px;
+        }
+
+        .avatar {
+          width: 60px;
+          height: 60px;
+        }
+
+        .odometer {
+          font-size: 1.4rem;
+        }
+
+        .xp-labels {
+          font-size: 0.8rem;
+        }
+      }
+    </style>
 </head>
 <body>
   <h1>Top 100 XP Leaderboard</h1>
