--- a/streams/mrbeastrise/mrbeast-test.html
+++ b/streams/mrbeastrise/mrbeast-test.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MrBeast Stats</title>
+  <script src="https://huntingstats378.github.io/main/assets/js/fetch-requests.js"></script>
 
   <!-- Google Fonts: Roboto -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
