--- a/streams/mrbeastrise/mrbeast-test.html
+++ b/streams/mrbeastrise/mrbeast-test.html
@@ -277,7 +277,7 @@
     }
 
     function pollSubscribers() {
-      let data = fetchyoutubechannel(UCX6OQ3DkcsbYNE6H8uQQuVA);
+      let data = fetchyoutubechannel("UCX6OQ3DkcsbYNE6H8uQQuVA");
           const subs = parseInt(data.counts[0]);
           const now = new Date();
           if (!startTime) return;
