--- a/streams/mrbeastrise/countdown.html
+++ b/streams/mrbeastrise/countdown.html
@@ -4,7 +4,7 @@
 <script src="https://lcedit.com/odometer/odometer.js"></script>
 
 <body>
-    <span>Me At The Zoo</span><br>
+    <span>HuntinmgStats378 2 Years Old</span><br>
     <span id="time" class="odometer">000000000000</span>
     <span id="time2" class="odometer">000000000000</span>
 </body>
