--- a/sta/compare/index.html
+++ b/sta/compare/index.html
@@ -35,7 +35,7 @@
 
 <script src="https://huntingstats378.github.io/HuntingStats378/main/assets/ess/odometer.js"></script>
 <script>
-const BASE_URL = "https://api.allorigins.win/raw?url=https://api.lurkr.gg/v2/levels/1150096734576451614";
+const BASE_URL = "https://corsproxy.io?https://api.lurkr.gg/v2/levels/1150096734576451614";
 
 // Get URL parameters
 function getIDsFromURL() {
