--- a/streams/mrbeastrise/compare-test.html
+++ b/streams/mrbeastrise/compare-test.html
@@ -17,7 +17,8 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background: white;
+    background: transparent;
+    color: white;
   }
 
   .container {
