--- a/streams/mrbeastrise/compare-test.html
+++ b/streams/mrbeastrise/compare-test.html
@@ -26,8 +26,7 @@
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    padding: 20px 40px;
-    gap: 40px;
+    padding: 20px;
   }
 
   .user {
