--- a/streams/mrbeastrise/compare-test.html
+++ b/streams/mrbeastrise/compare-test.html
@@ -90,22 +90,22 @@
     <img id="avatar1" class="avatar" src="https://huntingstats378.github.io/main/images/default.png">
     <div class="user-info">
       <h5 id="name1">Name</h5>
-      <h2 class="odometer" id="count1">100,000</h2>
+      <h2 class="odometer" id="count1">0</h2>
     </div>
   </div>
 
   <!-- Difference -->
   <div class="middle">
     <h4>Difference</h4>
-    <h2 class="odometer" id="difference">1,000</h2>
+    <h2 class="odometer" id="difference">0</h2>
   </div>
 
   <!-- Right User -->
   <div class="user reverse">
-    <img id="avatar2" class="avatar" src="https://yt3.ggpht.com/ytc/AIdro_m0Q9shdFENAjHqAz6xX9iAfRsaRsmZZfbrvOZk=s900-c-k-c0x00ffffff-no-rj">
+    <img id="avatar2" class="avatar" src="https://huntingstats378.github.io/main/images/default.png">
     <div class="user-info">
       <h5 id="name2">Name</h5>
-      <h2 class="odometer" id="count2">100,000</h2>
+      <h2 class="odometer" id="count2">0</h2>
     </div>
   </div>
 </div>
